// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render as a button correctly with all props 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 0.375rem 0.75rem;
  font-size: 18px;
  line-height: 1.5;
  color: #40413b;
  text-transform: uppercase;
  text-align: center;
  vertical-align: middle;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
}

.emotion-0:focus {
  outline: none;
}

<button
  className="emotion-0 emotion-1"
  disabled={false}
  onClick={[Function]}
>
  call to action
</button>
`;

exports[`Button should render as a link correctly with all props 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 0.375rem 0.75rem;
  font-size: 18px;
  line-height: 1.5;
  color: #40413b;
  text-transform: uppercase;
  text-align: center;
  vertical-align: middle;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
}

.emotion-0:focus {
  outline: none;
}

<a
  className="emotion-0 emotion-1"
  disabled={false}
  href="https://www.helloroot.co"
  onClick={[Function]}
>
  call to action
</a>
`;
